SDKs/circl.lu/hashlookup/1.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/circl.lu/hashlookup/1.0/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "context"
    "log"
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()

    req := operations.GetLookupSha1Sha1Request{
        PathParams: operations.GetLookupSha1Sha1PathParams{
            Sha1: "unde",
        },
    }

    ctx := context.Background()
    res, err := s.Default.GetLookupSha1Sha1(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.StatusCode == http.StatusOK {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations


### Default

* `GetLookupSha1Sha1` - Lookup SHA-1.
* `GetSessionGetName` - Return set of matching and non-matching hashes from a session.
* `GetInfo` - Info about the hashlookup database
* `GetLookup` - Lookup MD5.
* `GetSessioncreate` - Create a session key to keep search context. The session is attached to a name. After the session is created, the header `hashlookup_session` can be set to the session name.
* `PostBulkmd5` - Bulk search of MD5 hashes in a JSON array with the key 'hashes'.
* `PostBulksha1` - Bulk search of SHA1 hashes in a JSON array with the 'hashes'.
<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
